<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/location_map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp" />

    <Button
        android:id="@+id/broadcast_btn"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="3dp"
        android:background="#D50E52"
        android:padding="8dp"
        android:text="@string/broadcast"
        android:textColor="#ffffff"
        android:textSize="12sp" />

</RelativeLayout>




