<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="add_broadcast">Add Broadcast</string>
    <string name="add">Add</string>
    <string name="cancelBtn">Cancel</string>
    <string name="description">Description</string>
    <string name="broadcast">Broadcast</string>
    <string name="enter_course_to_filter">Enter Course To Filter</string>
    <string name="prompt_email">Email</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="button_Fragment">ButtonFragment</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new Journey</string>
    <string name="Welcome">Welcome,</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="go">GO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="todo">TODO</string>
    <string name="loginFragment">Login</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="StringCourses">
        <item name="DIT012">DIT012</item>
        <item name="DIT015">DIT015</item>
        <item name="DIT212">DIT212</item>
        <item name="DIT011">DIT011</item>
        <item name="DIT573t">DIT573</item>
        <item name="DIT327">DIT327</item>
    </string-array>

    <string name="edit">Edit</string>

    <string name="loading_with_ellipsis">Loading...</string>

    <string name="service_active_broadcast_description">Service used to keep the user\'s active broadcast alive</string>

    <string name="notification_channel_active_broadcast_name">Active Broadcast</string>
    <string name="notification_channel_active_broadcast_description">Notifications regarding your active broadcast</string>

    <string name="notification_active_broadcast_title">You\'re broadcasting!</string>
    <string name="notification_active_broadcast_stop">Stop broadcast</string>

    <string name="select_date">Select date</string>
    <string name="select_time_start">Select start time</string>
    <string name="select_time_end">Select end time</string>

    <string name="sign_out">Sign Out</string>

    <string name="broadcast_info_window_save">Save</string>
    <string name="broadcast_info_window_cancel">Cancel</string>
    <string name="broadcast_info_window_edit">Edit</string>
    <string name="broadcast_info_window_delete">Delete</string>
</resources>