...
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".android.ui.screen.welcome.LoginScreenFragment">


    <Button
        android:id="@+id/cirLoginButton"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/loginFragment"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    <EditText
        android:id="@+id/editTextEmail"
        style="@style/modifiedEditText"
        android:layout_width="356dp"
        android:layout_height="66dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
...
